lintian (1.23.31) UNRELEASED; urgency=low

  * checks/control-files.desc:
    + [RA] Change unknown-control-file to a warning, since Policy only
      discourages it and doesn't outlaw it.  (Closes: #287209)
  * checks/cruft:
    + [RA] Allow any automake package to satisfy the autotools-dev build
      dependency for suppressing warnings about out of date autotools
      helper files.  (Closes: #417067)
  * checks/fields:
    + [RA] Require libmodule-build-perl in Build-Depends if the clean rule
      runs perl Build.  Hopefully this isn't too aggressive.  Thanks, Ian
      Beckwith.  (Closes: #421549)
  * checks/scripts:
    + [RA] Add pagsh, provided by openafs-client and heimdal-clients.
    + [RA] Diagnose removal of device files in maintainer scripts per
      Policy 10.6.  (Closes: #268688)

 -- Russ Allbery <rra@debian.org>  Wed,  2 May 2007 21:05:30 -0700

lintian (1.23.30) unstable; urgency=low

  The "beating false positives off with a stick" release.

  * checks/common_data.pm:
    + [RA] Add mktemp and sysvinit-utils as known essential packages.
    + [RA] Add Vcs-Mtn and Vcs-Browser to the known source package
      fields.
    + [RA] Add Kernel-Version to known udeb control fields.
  * checks/control-files:
    + [RA] Allow clilibs, but don't try to check the syntax of it yet.
      Thanks, Sebastian Dröge.  (Closes: #378088)
  * checks/copyright-file:
    + [RA] Exclude the Affero General Public License from the check for
      references to the shared GPL copy.  (Closes: #420077)
    + [RA] Replace yet another hand-rolled dependency parser with Dep.
  * checks/cruft{.desc,}:
    + [RA] Check for svk commit message files.
  * checks/debconf{.desc,}:
    + [RA] Remove the dependency check for SETTITLE since all debconf
      implementations back to oldstable support it.
    + [RA] Reduce the dependency check for error templates to info since
      all debconf implementations back to stable support it.
  * checks/debhelper{.desc,}: